--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -26,12 +26,12 @@ h1 {
 }
 
 button {
+  width: 30px;
+  height: 30px;
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 600;
-  font-family: inherit;
+  border-radius: 50%;
+  font-family: Arial;
   background-color: royalblue;
   color: #f5f5f5;
   cursor: pointer;
