--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -26,12 +26,11 @@ h1 {
 }
 
 button {
-  width: 30px;
-  height: 30px;
-  border-radius: 8px;
+  width: 40px;
+  height: 40px;
+  text-align: center;
   border: 1px solid transparent;
   border-radius: 50%;
-  font-family: Arial;
   background-color: royalblue;
   color: #f5f5f5;
   cursor: pointer;
