--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,30 +1,12 @@
 #root {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+
+  border: 10px solid yellow;
 }
 
-.input-button-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-
-  border: 1px solid red;
-}
-
-.div-dayscomponents {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-
-  border: 1px solid #000;
-}
-
-
-.Input-box {
-  display: flex;
-
-  border: 1px solid #000;
+.main-btn {
+  padding: 10px 20px;
 }
