--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -9,6 +9,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  border: 10px solid salmon;
 }
 
 a:hover {
@@ -28,7 +30,9 @@ h1 {
 button {
   width: 40px;
   height: 40px;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: 1px solid transparent;
   border-radius: 50%;
   background-color: royalblue;
