--- a/vite-project/src/components/DaysComponent.css
+++ b/vite-project/src/components/DaysComponent.css
@@ -14,9 +14,26 @@
 }
 
 .save-btn {
+  width: 40px;
+  height: 40px;
   background-color: green;
 }
 
+.save-btn:hover {
+  background-color: rgb(0, 74, 0);
+}
+
+.modify-btn {
+  width: 40px;
+  height: 40px;
+}
+
 .delete-btn {
+  width: 40px;
+  height: 40px;
   background-color: red;
+}
+
+.delete-btn:hover {
+  background-color: rgb(204, 0, 0);
 }
