--- a/vite-project/src/components/DaysComponent.css
+++ b/vite-project/src/components/DaysComponent.css
@@ -1,6 +1,15 @@
+h3 {
+  margin: auto;
+
+  border: 1px solid #000;
+}
+
 .input-box {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
   border: 1px solid #000;
 }
 
