--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -36,13 +36,13 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
-  border-color: #646cff;
   background-color: blue;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+button:active {
+  background-color: skyblue;
 }
 
 @media (prefers-color-scheme: light) {
