--- a/vite-project/src/components/DaysComponent.css
+++ b/vite-project/src/components/DaysComponent.css
@@ -32,6 +32,10 @@ h3 {
   background-color: rgb(0, 74, 0);
 }
 
+.save-btn:active {
+  background-color: rgb(104, 255, 104);
+}
+
 .modify-btn {
   width: 40px;
   height: 40px;
@@ -45,4 +49,8 @@ h3 {
 
 .delete-btn:hover {
   background-color: rgb(204, 0, 0);
+}
+
+.delete-btn:active {
+  background-color: rgb(255, 70, 70);
 }
