--- a/vite-project/src/components/DaysComponent.css
+++ b/vite-project/src/components/DaysComponent.css
@@ -5,10 +5,13 @@ h3 {
 }
 
 .input-box {
+  width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+
+  margin: auto;
 
   border: 1px solid #000;
 }
