--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -25,6 +25,10 @@ h1 {
   font-size: 2.2em;
 }
 
+label {
+  margin-bottom: 10px;
+}
+
 button {
   display: flex;
   align-items: center;
@@ -32,6 +36,7 @@ button {
   border: 1px solid transparent;
   border-radius: 50%;
   background-color: royalblue;
+  box-shadow: 0 0 7px #a1a1a1;
   color: #f5f5f5;
   cursor: pointer;
   transition: border-color 0.25s;
@@ -39,6 +44,7 @@ button {
 
 button:hover {
   background-color: blue;
+  box-shadow: 0 0 0 #a1a1a1;
 }
 
 button:active {
