iterator for id + checkbox reset + textarea for liste + file renamed

--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -53,6 +53,13 @@ button:active {
   background-color: skyblue;
 }
 
+.custom-btn {
+  font-size: 1.0rem;
+  font-weight: bold;
+  border-radius: 8px;
+  padding: 10px 20px;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
