--- a/vite-project/src/components/styles/TodoPerDayComp.css
+++ b/vite-project/src/components/styles/TodoPerDayComp.css
@@ -1,31 +1,5 @@
-.main--div {
-  border: 1px solid red;
-}
-
-.div--day {
-  width: 100%;
-  text-align: center;
-  border: 1px solid red;
-}
-
-.main--div--todo {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-
-.main-div-daycomp {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  border: none;
-  border-radius: 7px;
-  box-shadow: 0 0 7px rgba(65, 105, 225, 0.5);
-}
-
 h3 {
+  width: 100%;
   margin: auto;
   border-bottom: 1px solid rgba(65, 105, 225, 0.2);
 }
@@ -36,6 +10,84 @@ h5 {
   margin-left: 10px;
 }
 
+.main--div {
+  /* border: 10px solid red; */
+}
+
+.div--day {
+  text-align: center;
+}
+
+.container--todo {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+
+  border-radius: 20px;
+  box-shadow: 0 0 7px #c1c1c1;
+
+  /* border: 10px solid orange; */
+}
+
+.priority--div {
+  width: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  /* border: 10px solid black; */
+}
+
+.date-project-liste-delay {
+  width: 60%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+
+  /* border: 10px solid green; */
+}
+
+.form {
+  width: 100%;
+  /* border: 10px solid black; */
+}
+
+.daycomp-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  background-color: rgba(65, 105, 225, 0.1);
+  border: none;
+  border-radius: 7px;
+  box-shadow: 0 0 7px rgba(65, 105, 225, 0.5);
+
+  /* border: 10px solid cyan; */
+
+}
+
+/* .main-div-daycomp {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border: none;
+  border-radius: 7px;
+  box-shadow: 0 0 7px rgba(65, 105, 225, 0.5);
+} */
+
+.input-btn-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+
 .input-box-daycomp {
   width: 80%;
   display: flex;
@@ -44,46 +96,33 @@ h5 {
   justify-content: space-between;
   margin: auto;
 
-  border: 10px solid cyan;
-}
-
-.daycomp-box {
-  /* width: 15%; */
-  background-color: rgba(65, 105, 225, 0.1);
-  border: none;
-  border-radius: 7px;
-  box-shadow: 0 0 7px rgba(65, 105, 225, 0.5);
-
-  border: 10px solid orange;
-
+  /* border: 10px solid cyan; */
 }
 
 .daycomp-textarea {
-  border: 10px solid orangered;
+  /* border: 10px solid orangered; */
 }
 
-.daycomp-box-client {
-  background-color: rgba(65, 105, 225, 0.1);
-  border: none;
-  border-radius: 7px;
-  box-shadow: 0 0 7px rgba(65, 105, 225, 0.5);
-  margin: auto;
+.client-mail-phone {
+  width: 20%;
 
-  border: 10px solid salmon;
-}
-
-.input-button-container {
-  display: flex;
-  flex-direction: row;
+    display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+
+  border: 1px solid rgba(65, 105, 225, 0.2);
+  border-radius: 7px;
+
+  margin: auto;
 }
 
 .input-button-client {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
+
+  border: 10px solid dimgrey;
 }
 
 .btn-params {
@@ -124,30 +163,33 @@ h5 {
   margin-left: 5px;
 }
 
-.delete-btn {
+
+.div--btndelete--project {
+  width: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border: 1px solid violet;
+}
+
+.delete--btn {
   width: 40px;
   height: 40px;
   background-color: red;
 }
 
-.delete-btn-client {
+.delete--btn-client {
   width: 30px;
   height: 30px;
   margin-left: 5px;
   background-color: red;
 }
 
-.delete-btn:hover {
+.delete--btn:hover {
   background-color: rgb(204, 0, 0);
 }
 
-.delete-btn:active {
+.delete--btn:active {
   background-color: rgb(255, 70, 70);
-}
-
-.div-btndelete-project {
-  width: 10%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
