--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,6 +1,11 @@
 #root {
-  max-width: 100%;
+  max-width: 1600px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+
+.main--div--app {
+  width: 100%;
+  border: 10px solid salmon;
 }
