--- a/vite-project/src/components/styles/CreatorInputComp.css
+++ b/vite-project/src/components/styles/CreatorInputComp.css
@@ -21,7 +21,7 @@
   padding: 0 20px;
   padding-bottom: 10px;
   padding-top: 15px;
-  background-color: #eeeeee;
+  background-color: #000;
   border: none;
   border-radius: 10px;
   box-shadow: 0 0 7px #c1c1c1;
