--- a/vite-project/src/components/styles/CreateInputCheckbox.css
+++ b/vite-project/src/components/styles/CreateInputCheckbox.css
@@ -1,4 +1,5 @@
-.creation-container {
+.creation--container {
+  width: auto;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -6,6 +7,7 @@
 }
 
 .creation-input-container {
+  width: 90%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -13,20 +15,29 @@
 }
 
 .checkbox-lbl-input {
+  width: auto;
   display: flex;
   flex-direction: column;
   align-items: start;
   justify-content: center;
-  margin: 0 20px;
+
   padding: 0 20px;
   padding-bottom: 10px;
   padding-top: 15px;
-  background-color: #000;
+
+  background-color: #0f172a;
   border: none;
-  border-radius: 10px;
-  box-shadow: 0 0 7px #c1c1c1;
+  border-radius: 7px;
+  box-shadow: 0 0 7px #38bdf8;
 }
 
 .checkbox-lbl-input:hover {
-  box-shadow: 0 0 0 #c1c1c1;
+  box-shadow: 0 0 0 #38bdf8;
+}
+
+.creation--btn--div {
+  width: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
