--- a/vite-project/src/components/subcomponents/styles/EditableFields.css
+++ b/vite-project/src/components/subcomponents/styles/EditableFields.css
@@ -31,17 +31,17 @@ h3 {
   align-items: center;
   justify-content: space-between;
 
-  border: 10px solid red;
+  border: 3px solid red;
 }
 
-.input-button-client {
+.input-button-textarea {
   width: 80%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
 
-  border: 10px solid dimgrey;
+  border: 3px solid pink;
 }
 
 .modify-btn {
