--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -2,8 +2,8 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 600;
 
-  color: #f5f5f5;
-  background-color: #333;
+  color: #f9fafb;
+  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -18,12 +18,15 @@ a:hover {
 body {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: auto;
   box-sizing: border-box;
 }
 
 h1 {
   font-size: 2.2em;
-  color: rgba(65, 105, 225, 0.5);
+  /*color: rgb(78, 122, 255);*/
+  color: #38bdf8;
   margin: auto;
 }
 
@@ -34,7 +37,6 @@ button {
   border: 1px solid transparent;
   border-radius: 50%;
   background-color: royalblue;
-  box-shadow: 0 0 7px #535bf2;
   color: #f5f5f5;
   cursor: pointer;
   transition: border-color 0.25s;
