--- a/vite-project/src/components/styles/TodoPerDay.css
+++ b/vite-project/src/components/styles/TodoPerDay.css
@@ -1,7 +1,6 @@
-h3 {
+h2 {
   width: 100%;
-  margin: auto;
-  border-bottom: 1px solid rgba(65, 105, 225, 0.2);
+  margin: 10px auto;
 }
 
 /* h5 {
@@ -11,7 +10,8 @@ h3 {
 } */
 
 .main--div {
-  border: 3px solid cyan;
+  border: none;
+  border-radius: 20px;
 }
 
 .div--day {
@@ -19,24 +19,25 @@ h3 {
 }
 
 .container--todo {
-  width: 100%;
+  width: auto;
   height: auto;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-
+  border: none;
   border-radius: 20px;
-  box-shadow: 0 0 7px #c1c1c1;
+  box-shadow: 0 0 7px #4169e180;
 
   /* border: 10px solid orange; */
 }
 
 .priority--div {
-  width: 10%;
+  width: 15%;
   display: flex;
   align-items: center;
   justify-content: center;
+
 
   /* border: 10px solid black; */
 }
@@ -51,17 +52,15 @@ h3 {
   /* border: 10px solid green; */
 }
 
-.client-mail-phone {
-  width: 20%;
-
-    display: flex;
+.client--mail--phone {
+  width: 15%;
+  display: flex;
   flex-direction: column;
   align-items: center;
-
   border: 1px solid rgba(65, 105, 225, 0.2);
   border-radius: 7px;
-
   margin: auto;
+
 }
 
 .div--crossout--delete {
