--- a/vite-project/src/components/subcomponents/styles/EditableFields.css
+++ b/vite-project/src/components/subcomponents/styles/EditableFields.css
@@ -1,47 +1,44 @@
 h3 {
   width: 100%;
+  text-align: center;
   margin: auto;
   border-bottom: 1px solid rgba(65, 105, 225, 0.2);
 }
 
 .form {
   width: 100%;
-
-  /* border: 10px solid black; */
 }
 
 .daycomp-box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-
-  background-color: rgba(65, 105, 225, 0.1);
+  width: 100%;
+  background-color: #0f172a;
   border: none;
   border-radius: 7px;
-  box-shadow: 0 0 7px rgba(65, 105, 225, 0.5);
-
-  border: 1px solid red;
+  box-shadow: 0 0 7px #4169e180;
 }
 
 .input-button-container {
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-
-  border: 3px solid red;
 }
 
 .input-button-textarea {
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+}
 
-  border: 3px solid pink;
+.input-button-client {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .modify-btn {
