--- a/vite-project/src/components/styles/CreateInputCheckbox.css
+++ b/vite-project/src/components/styles/CreateInputCheckbox.css
@@ -3,32 +3,43 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+}
+
+.creation--input--checkbox {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .creation-input-container {
-  width: 90%;
+  width: auto;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .checkbox-lbl-input {
-  width: auto;
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: start;
-  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 
+  margin: 0 -10px;
+  margin-top: 20px;
   padding: 0 20px;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
   padding-top: 15px;
 
   background-color: #0f172a;
   border: none;
   border-radius: 7px;
   box-shadow: 0 0 7px #38bdf8;
+  box-sizing: border-box;
 }
 
 .checkbox-lbl-input:hover {
