--- a/vite-project/src/components/styles/FetchFromCSV.css
+++ b/vite-project/src/components/styles/FetchFromCSV.css
@@ -5,29 +5,23 @@
     justify-content: center;
 }
 
-h2 {
-    font-size: 2.0rem;
-    text-align: center;
-}
-
-h3 {
-    font-size: 1.4rem;
-    text-align: center;
-}
-
-p {
-    border: 1px solid red;
+.p--data {
+    font-size: 1.6rem;
+    color: orange;
+    padding: 20px;
+    background: 000;
+    border: 1px dashed orange;
+    border-radius: 7px;
 }
 
 ul {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    border: 1px solid pink;
+    padding-left: 0;
 }
 
 li {
-    font-size: 1.2rem;
-    border: 1px solid blue;
+    font-size: 1.1rem;
 }
