--- a/vite-project/src/components/styles/TodoPerDay.css
+++ b/vite-project/src/components/styles/TodoPerDay.css
@@ -1,14 +1,3 @@
-h2 {
-  width: 100%;
-  margin: 10px auto;
-}
-
-/* h5 {
-  text-align: left;
-  margin: auto;
-  margin-left: 10px;
-} */
-
 .main--div {
   border: none;
   border-radius: 20px;
@@ -27,44 +16,42 @@ h2 {
   justify-content: space-between;
   border: none;
   border-radius: 20px;
-  box-shadow: 0 0 7px #4169e180;
+  /* background-color: #0f172a; */
+  background: orange;
+  box-shadow: 0 0 7px #38bdf8;
 
   /* border: 10px solid orange; */
 }
 
 .priority--div {
-  width: 15%;
+  width: 10%;
   display: flex;
   align-items: center;
   justify-content: center;
-
-
   /* border: 10px solid black; */
 }
 
 .date-project-liste-delay {
-  width: 60%;
+  width: 67.5%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-
   /* border: 10px solid green; */
 }
 
 .client--mail--phone {
-  width: 15%;
+  width: 17.5%;
   display: flex;
   flex-direction: column;
   align-items: center;
   border: 1px solid rgba(65, 105, 225, 0.2);
   border-radius: 7px;
   margin: auto;
-
 }
 
 .div--crossout--delete {
-  width: 10%;
+  width: 5%;
   height: 100%;
   display: flex;
   flex-direction: column;
