--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -2,8 +2,8 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 600;
 
-  color: #f9fafb;
-  background-color: #242424;
+  color: aqua;
+  background-color: #202020;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,9 +25,20 @@ body {
 
 h1 {
   font-size: 2.2em;
-  /*color: rgb(78, 122, 255);*/
-  color: #38bdf8;
+  color: aqua;
   margin: auto;
+}
+
+h2 {
+  width: 100%;
+  font-size: medium;
+  margin: 10px auto;
+  color: orange;
+}
+
+h3 {
+  font-size: 2.0rem;
+  text-align: center;
 }
 
 button {
@@ -36,19 +47,19 @@ button {
   justify-content: center;
   border: 1px solid transparent;
   border-radius: 50%;
-  background-color: royalblue;
+  background-color: #3564ff;
   color: #f5f5f5;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 
 button:hover {
-  background-color: blue;
+  background-color: #003cff;
   box-shadow: 0 0 0 #001088;
 }
 
 button:active {
-  background-color: skyblue;
+  background-color: #688bff;
 }
 
 .custom-btn {
