--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -41,6 +41,11 @@ h3 {
   text-align: center;
 }
 
+h6 {
+  margin: auto;
+  color: orange;
+}
+
 button {
   display: flex;
   align-items: center;
