--- a/vite-project/src/components/styles/CreateInputCheckbox.css
+++ b/vite-project/src/components/styles/CreateInputCheckbox.css
@@ -4,6 +4,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  
+  margin-bottom: 20px;
 }
 
 .creation--input--checkbox {
