--- a/vite-project/src/components/styles/TodoPerDay.css
+++ b/vite-project/src/components/styles/TodoPerDay.css
@@ -14,10 +14,9 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  background-color: #0f172a;
   border: none;
   border-radius: 20px;
-  /* background-color: #0f172a; */
-  background: orange;
   box-shadow: 0 0 7px #38bdf8;
 
   /* border: 10px solid orange; */
@@ -26,9 +25,14 @@
 .priority--div {
   width: 10%;
   display: flex;
+  
+  flex-direction: column;
+
   align-items: center;
-  justify-content: center;
-  /* border: 10px solid black; */
+
+  justify-content: space-between;
+
+  /* border: 10px solid #fff; */
 }
 
 .date-project-liste-delay {
@@ -40,6 +44,7 @@
   /* border: 10px solid green; */
 }
 
+/* Animation */
 .client--mail--phone {
   width: 17.5%;
   display: flex;
@@ -51,6 +56,7 @@
 }
 
 .div--crossout--delete {
+  position: relative;
   width: 5%;
   height: 100%;
   display: flex;
@@ -60,9 +66,11 @@
 }
 
 .cross--out--btn {
+  position: relative;
   width: 40px;
   height: 40px;
   background-color: green;
+  z-index: 2;
 }
 
 .cross--out--btn:hover {
@@ -74,10 +82,12 @@
 }
 
 .delete--btn {
+  position: relative;
   width: 40px;
   height: 40px;
   background-color: red;
-  margin-top: 50%;
+  /* margin-top: 50%; */
+  z-index: 1;
 }
 
 .delete--btn:hover {
