--- a/vite-project/src/components/subcomponents/styles/EditableFields.css
+++ b/vite-project/src/components/subcomponents/styles/EditableFields.css
@@ -36,7 +36,7 @@
 
 /* 1 */
 .input-button-client {
-  position: absolute;
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -46,7 +46,7 @@
 
 /* 2 */
 .input-button-mail {
-  position: absolute;
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -56,7 +56,7 @@
 
 /* 3 */
 .input-button-phone {
-  position: absolute;
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: row;
