--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,17 +1,21 @@
 #root {
-  max-width: 1500px;
+  /* max-width: 1800px; */
+  width: 100%;
   margin: 0 auto;
 }
 
 .main--div--app {
-  width: 100%;
+  width: 90%;
+  margin: auto;
 }
 
 .main--title {
+  width: 100%;
   padding-top: 20px;
   text-align: center;
 }
 
 .div--switcher--btn {
+  width: auto;
   padding-bottom: 20px;
 }
