--- a/vite-project/src/components/styles/TodoPerDay.css
+++ b/vite-project/src/components/styles/TodoPerDay.css
@@ -3,10 +3,6 @@
   border-radius: 20px;
 }
 
-.div--day {
-  text-align: center;
-}
-
 .container--todo {
   width: auto;
   height: auto;
@@ -24,6 +20,7 @@
 
 .priority--div {
   width: 10%;
+  height: 100%;
   display: flex;
   
   flex-direction: column;
@@ -31,8 +28,11 @@
   align-items: center;
 
   justify-content: space-between;
+}
 
-  /* border: 10px solid #fff; */
+.div--day {
+  text-align: center;
+  margin: 8%;
 }
 
 .date-project-liste-delay {
@@ -67,8 +67,8 @@
 
 .cross--out--btn {
   position: relative;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   background-color: green;
   z-index: 2;
 }
@@ -83,8 +83,8 @@
 
 .delete--btn {
   position: relative;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   background-color: red;
   /* margin-top: 50%; */
   z-index: 1;
