--- a/vite-project/src/components/subcomponents/styles/EditableFields.css
+++ b/vite-project/src/components/subcomponents/styles/EditableFields.css
@@ -38,30 +38,39 @@
 .input-button-client {
   position: relative;
   width: 100%;
+  /* width: 15.75%; */
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+
+  border: 1px solid coral;
 }
 
 /* 2 */
 .input-button-mail {
   position: relative;
   width: 100%;
+  /* width: 15.75%; */
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+
+  border: 1px solid coral;
 }
 
 /* 3 */
 .input-button-phone {
   position: relative;
   width: 100%;
+  /* width: 15.75%; */
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+
+  border: 1px solid coral;
 }
 
 .textarea--editable {
@@ -112,13 +121,14 @@ span {
   display: flex;
   align-items: center;
   justify-content: center;
-  /* border: 1px solid yellow; */
+  
+  border: 1px solid yellow;
 }
 
 .modify-btn {
   position: absolute;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
 
 
 }
