--- a/vite-project/src/components/subcomponents/styles/PriorityTodo.css
+++ b/vite-project/src/components/subcomponents/styles/PriorityTodo.css
@@ -1,6 +1,7 @@
 .priority--container {
     width: auto;
     border: none;
+    margin: 8%;
 }
 
 .priority--field {
@@ -25,4 +26,11 @@ option {
     border: 1.5px solid #334155;
     border-radius: 7px;
     padding: 5px 7px;
+}
+
+.priority-btn {
+  font-size: 0.8rem;
+  font-weight: bold;
+  border-radius: 4px;
+  padding: 5px 10px;
 }
