--- a/vite-project/src/components/styles/TodoPerDay.css
+++ b/vite-project/src/components/styles/TodoPerDay.css
@@ -1,11 +1,13 @@
 .main--div {
   border: none;
+  height: 90px;
   border-radius: 20px;
+  margin-bottom: 20px;
 }
 
 .container--todo {
   width: auto;
-  height: auto;
+  height: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -15,38 +17,38 @@
   border-radius: 20px;
   box-shadow: 0 0 7px #38bdf8;
 
-  /* border: 10px solid orange; */
+  /* border: 3px solid orange; */
 }
 
 .priority--div {
-  width: 10%;
+  width: 5%;
   height: 100%;
   display: flex;
-  
   flex-direction: column;
-
   align-items: center;
-
   justify-content: space-between;
+
+  /* border: 1px solid yellow; */
 }
 
 .div--day {
+  display: flex;
+  height: 50%;
   text-align: center;
-  margin: 8%;
 }
 
 .date-project-liste-delay {
-  width: 67.5%;
+  width: 70%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+
   /* border: 10px solid green; */
 }
 
-/* Animation */
 .client--mail--phone {
-  width: 17.5%;
+  width: 20%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -62,7 +64,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .cross--out--btn {
