--- a/vite-project/src/components/subcomponents/styles/EditableFields.css
+++ b/vite-project/src/components/subcomponents/styles/EditableFields.css
@@ -1,10 +1,3 @@
-.title--box {
-  width: 100%;
-  text-align: center;
-  margin: auto;
-  border-bottom: 1px solid rgba(65, 105, 225, 0.2);
-}
-
 .form {
   width: 100%;
 }
@@ -17,12 +10,46 @@
   box-shadow: 0 0 7px #4169e180;
 }
 
+.title--btn--edit {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.title--box {
+  width: 100%;
+  text-align: center;
+  margin: auto;
+  border-bottom: 1px solid rgba(65, 105, 225, 0.2);
+
+  /* border: 1px solid magenta; */
+}
+
+.div--btn--client {
+  position: relative;
+  width: 25%;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  /* border: 1px solid yellow; */
+}
+
+.mini-btn {
+  width: 40px;
+  height: 20px;
+  border-radius: 3px;
+}
+
 .input-button-container {
   width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+
   /* border: 1px solid red; */
 }
 
@@ -43,8 +70,9 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  z-index: 1;
 
-  border: 1px solid coral;
+  /* border: 1px solid coral; */
 }
 
 /* 2 */
@@ -56,8 +84,9 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  z-index: 1;
 
-  border: 1px solid coral;
+  /* border: 1px solid coral; */
 }
 
 /* 3 */
@@ -69,8 +98,9 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  z-index: 10;
 
-  border: 1px solid coral;
+  /* border: 1px solid coral; */
 }
 
 .textarea--editable {
@@ -91,14 +121,10 @@
 
 .input--editable {
   width: 75%;
-
   padding: 7px 7px;
   font-size: 16px;
-
   color: aqua;
-
   background: #0f172a;
-
   border: 1.5px solid #334155;
   border-radius: 12px;
   outline: none;
@@ -110,11 +136,13 @@
 
 span {
   width: 80%;
+  height: auto;
   text-align: center;
+
   /* border: 1px solid salmon; */
 }
 
-.div--submit {
+.div--btn--submit {
   position: relative;
   width: 20%;
   height: 40px;
@@ -122,13 +150,11 @@ span {
   align-items: center;
   justify-content: center;
   
-  border: 1px solid yellow;
+  /* border: 1px solid yellow; */
 }
 
 .modify-btn {
   position: absolute;
   width: 30px;
   height: 30px;
-
-
 }
