--- a/vite-project/src/components/subcomponents/styles/PriorityTodo.css
+++ b/vite-project/src/components/subcomponents/styles/PriorityTodo.css
@@ -1,7 +1,7 @@
 .priority--container {
     width: auto;
     border: none;
-    margin: 8%;
+    height: 50%;
 }
 
 .priority--field {
@@ -29,8 +29,8 @@ option {
 }
 
 .priority-btn {
-  font-size: 0.8rem;
-  font-weight: bold;
-  border-radius: 4px;
-  padding: 5px 10px;
+    font-size: 0.8rem;
+    font-weight: bold;
+    border-radius: 4px;
+    padding: 5px 10px;
 }
