--- a/vite-project/src/components/styles/FetchFromCSV.css
+++ b/vite-project/src/components/styles/FetchFromCSV.css
@@ -17,7 +17,7 @@
 .div--todo {
     width: 90%;
 
-    background-color: #252525;
+    background-color: #0f172a;
     border: none;
     border-radius: 20px;
 
@@ -42,5 +42,7 @@ li {
 }
 
 hr {
-    border-bottom: 1px solid rgba(0, 255, 255, 0.3);
+    border: none;
+    border-bottom: 1px solid #38bdf8;
+    border-radius: 50px;
 }
