--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -25,7 +25,7 @@ body {
 
 h1 {
   font-size: 2.2em;
-  color: aqua;
+  color: #007cff;
   margin: auto;
 }
 
@@ -39,6 +39,7 @@ h2 {
 h3 {
   font-size: 2.0rem;
   text-align: center;
+  color: #007cff;
 }
 
 h6 {
