--- a/vite-project/src/components/subcomponents/subCalendar/styles/TableCalendar.css
+++ b/vite-project/src/components/subcomponents/subCalendar/styles/TableCalendar.css
@@ -1,4 +1,4 @@
-.main--div--calendar {
+/* .main--div--calendar {
     width: 100%;
     height: 65vh;
     display: flex;
@@ -9,7 +9,7 @@
 
 .div--calendar {
     width: 100%;
-}
+} */
 
 .table--calendar {
     width: 100%;
@@ -30,11 +30,6 @@ th {
 
 th, tr {
     width: 12.5%;
-}
-
-td {
-    text-align: center;
-    padding: 20px;
 }
 
 tr:nth-child(even) {
