calendar & styles improved

--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -23,3 +23,15 @@
   justify-content: space-between;
   padding-bottom: 20px;
 }
+
+.main--div--calendar {
+    width: 100%;
+    min-height: 80vh;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+}
+
+.div--calendar {
+    width: 100%;
+}
