--- a/vite-project/src/components/styles/FetchFromCSV.css
+++ b/vite-project/src/components/styles/FetchFromCSV.css
@@ -1,26 +1,19 @@
 .div--fetch {
+    width: auto;
+    min-height: 80vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-}
+    justify-content: start;
 
-.p--data {
-    font-size: 1.6rem;
-    color: orange;
-    padding: 20px;
-    background: 000;
-    border: 1px dashed orange;
-    border-radius: 7px;
+    /* border: 3px solid cyan; */
 }
 
 .div--todo {
     width: 90%;
-
     background-color: #0f172a;
     border: none;
     border-radius: 20px;
-
     padding: 20px;
 }
 
