--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -21,7 +21,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .main--div--calendar {
