--- a/vite-project/src/components/subcomponents/styles/DateCalendar.css
+++ b/vite-project/src/components/subcomponents/styles/DateCalendar.css
@@ -1,6 +1,15 @@
-td {
+th {
+    margin: auto;
     text-align: center;
     border: none;
     box-shadow: 0 0 7px #38bdf8;
+}
 
+.jour-th {
+    background: linear-gradient(0deg, #3564ff, #87cefa);
+    background-clip: text; 
+    -webkit-background-clip: text;
+    /* -webkit-text-fill-color: transparent; */
+    color: transparent;
+    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
 }
