--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -2,7 +2,7 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 600;
 
-  color: #00d5ff;
+  color: #87cefa;
   background-color: #202020;
 
   font-synthesis: none;
@@ -45,6 +45,12 @@ h2 {
 h3 {
   font-size: 2.0rem;
   text-align: center;
+  background: linear-gradient(0deg, #3564ff, #87cefa);
+  background-clip: text; 
+  -webkit-background-clip: text;
+  /* -webkit-text-fill-color: transparent; */
+  color: transparent;
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
 }
 
 h4 {
