--- a/vite-project/src/components/styles/TableCalendar.css
+++ b/vite-project/src/components/styles/TableCalendar.css
@@ -57,4 +57,5 @@ tr:nth-child(even) {
     border: 1px solid #000;
     border-right: 1px solid rgba(0, 255, 255, 0.7);
     border-left: 1px solid rgba(0, 255, 255, 0.7);
+    cursor: pointer;
 }
