--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -68,9 +68,10 @@ button {
   justify-content: center;
   border: none;
   border-radius: 50%;
-  background: linear-gradient(0deg, 
+  /* background: linear-gradient(0deg, 
     rgba(53, 100, 255, 1) 10%, 
-    rgba(135, 206, 250, 1) 90%);
+    rgba(135, 206, 250, 1) 90%); */
+  background: #3564ff;
   color: #f5f5f5;
   cursor: pointer;
   transition: border-color 0.25s;
@@ -95,9 +96,10 @@ button:active {
   position: relative;
   width: 30px;
   height: 30px;
-  background: linear-gradient(0deg, 
+  /* background: linear-gradient(0deg, 
     rgba(255, 0, 0, 1), 
-    rgba(255, 165, 0, 1));
+    rgba(255, 165, 0, 1)); */
+  background: red;
   z-index: 1;
 }
 
