--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -30,26 +30,27 @@ h1 {
   background: linear-gradient(0deg, #3564ff, #87cefa);
   background-clip: text; 
   -webkit-background-clip: text;
-  /* -webkit-text-fill-color: transparent; */
+  -webkit-text-fill-color: transparent;
   color: transparent;
   text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
 }
 
 h2 {
   width: 100%;
-  font-size: medium;
-  margin: 10px auto;
-  color: #ffa500;
-}
-
-h3 {
-  font-size: 2.0rem;
   text-align: center;
+  font-size: 2.2rem;
   background: linear-gradient(0deg, #3564ff, #87cefa);
   background-clip: text; 
   -webkit-background-clip: text;
-  /* -webkit-text-fill-color: transparent; */
+  -webkit-text-fill-color: transparent;
   color: transparent;
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+h3 {
+  font-size: 1.8rem;
+  text-align: center;
+  color: #ffa500;
   text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
 }
 
@@ -99,7 +100,7 @@ button:active {
   /* background: linear-gradient(0deg, 
     rgba(255, 0, 0, 1), 
     rgba(255, 165, 0, 1)); */
-  background: red;
+  background: #ff4500;
   z-index: 1;
 }
 
