--- a/vite-project/src/components/subcomponents/styles/InputComp.css
+++ b/vite-project/src/components/subcomponents/styles/InputComp.css
@@ -3,7 +3,7 @@
     padding: 10px 7px;
     font-size: 16px;
     color: #87cefa;
-    background-color: #00002f;;
+    background-color: #00002f;
     border: 1.5px solid #334155;
     border-radius: 12px;
     outline: none;
