--- a/vite-project/src/components/subcomponents/styles/PriorityTodo.css
+++ b/vite-project/src/components/subcomponents/styles/PriorityTodo.css
@@ -11,18 +11,18 @@
 select {
     position: relative;
     font-size: 16px;
-    color: aqua;
-    background-color: #0f172a;;
+    color: #87cefa;
+    background-color: #00002f;
     border: none;
     border-radius: 7px;
-    box-shadow: 0 0 7px #4169e180;;
+    box-shadow: 0 0 7px #4169e180;
     padding: 10px 5px;
 }
 
 option {
     font-size: 16px;
-    background-color: #0f172a;;
-    color: aqua;
+    background-color: #00002f;
+    color: #87cefa;
     border: 1.5px solid #334155;
     border-radius: 7px;
     padding: 5px 7px;
