--- a/vite-project/src/components/subcomponents/styles/PriorityTodo.css
+++ b/vite-project/src/components/subcomponents/styles/PriorityTodo.css
@@ -32,5 +32,6 @@ option {
     font-size: 0.8rem;
     font-weight: bold;
     border-radius: 4px;
+    box-shadow: 0 0 7px #000080;
     padding: 5px 10px;
 }
