--- a/vite-project/src/components/subcomponents/styles/PriorityTodo.css
+++ b/vite-project/src/components/subcomponents/styles/PriorityTodo.css
@@ -16,6 +16,7 @@ select {
     border: none;
     border-radius: 7px;
     box-shadow: 0 0 7px #4169e180;
+    cursor: pointer;
     padding: 10px 5px;
 }
 
