--- a/vite-project/src/components/styles/TableCalendar.css
+++ b/vite-project/src/components/styles/TableCalendar.css
@@ -44,6 +44,13 @@ tr:nth-child(even) {
     background-color: #00002f;
 }
 
+.week--indicator {
+    position: relative;
+    top: -7px;
+    left: 5px;
+    color: yellow;
+}
+
 .calendar--todo {
     /* width: auto; */
     display: flex;
