--- a/vite-project/src/components/styles/TableOfTodos.css
+++ b/vite-project/src/components/styles/TableOfTodos.css
@@ -15,7 +15,7 @@
 
     border: none;
     border-radius: 20px;
-    box-shadow: 0 0 7px #38bdf8;
+    box-shadow: 0 -2px 7px #38bdf8;
 
-    margin-bottom: 20px;
+    margin-bottom: 0px;
 }
