--- a/vite-project/src/components/styles/TableCalendar.css
+++ b/vite-project/src/components/styles/TableCalendar.css
@@ -18,8 +18,6 @@
 table, th, td {
     border: none;
     box-shadow: 0 0 7px #38bdf8;
-    
-    /* border: 10px solid violet; */
 }
 
 th {
@@ -34,10 +32,7 @@ tr, th {
 
 td {
     width: auto;
-    /* text-align: center; */
     border: none;
-
-    /* border: 1px solid violet; */
 }
 
 tr:nth-child(even) {
@@ -46,25 +41,28 @@ tr:nth-child(even) {
 
 .week--indicator {
     position: relative;
-    top: -5px;
-    left: 5px;
+    bottom: 7px;
+    left: 0px;
     color: yellow;
 }
 
 .calendar--todo {
-    /* width: auto; */
+    width: auto;
+    margin: 0;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     font-size: 12px;
     color: #333;
-    background-color: #87cefa;
-    border: 1px solid transparent;
-    border-bottom: 1px solid #000;
-    border-right: 1px solid rgba(0, 255, 255, 0.7);
+    background-color: #000;
     border-left: 3px solid #3564ff;
     cursor: pointer;
-    padding: 3px 2px;
+}
+
+.span--todo--values {
+    width: 100%;
+    height: 100%;
+    background-color: #87cefa;
 }
 
 .btn--visible {
@@ -83,25 +81,51 @@ tr:nth-child(even) {
 
 .div--change--delay {
     width: 100%;
+    height: 100%;
+    margin: auto;
+    background-color: #87cefa;
+
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+}
+
+.div--input--delay {
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .input--delay {
-    width: 75%;
-    font-size: 14px;
+    width: 90%;
+    text-align: center;
+    font-size: 16px;
     color: #87cefa;
     background-color: #000;
-    border: 1.5px solid #334155;
-    border-radius: 12px;
+    border: 1px solid #334155;
+    border-radius: 7px;
     outline: none;
-    padding: 7px;
+    padding: 6px 0;
+    margin: 3px 0;
+}
+
+.input--delay:focus {
+    border-color: #38bdf8;
+    box-shadow: 0 0 0 4px rgba(56, 189, 248, 0.2);
+}
+
+.input--delay:hover {
+    border-color: #475569;
+}
+
+.input--delay::placeholder {
+    color: rgba(135, 206, 250, 0.5);
 }
 
 .div--btn--validate {
-    width: 25%;
+    width: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -110,10 +134,10 @@ tr:nth-child(even) {
 .btn--validate {
     background-color: #00b300;
     border: none;
-    border-radius: 100%;
+    border-radius: 7px;
     box-shadow: 0 0 0 #111;
     color: #fff;
-    padding: 5px;
+    padding: 5px 20px;
     transform: scale(1.0);
     transition: background-color 0.25s ease, transform 0.25s ease;
 }
