--- a/vite-project/src/components/styles/TodoPerDay.css
+++ b/vite-project/src/components/styles/TodoPerDay.css
@@ -27,24 +27,58 @@
   /* border: 1px solid yellow; */
 }
 
-.date-project-liste-delay {
-  width: 67.5%;
+.project-liste-delay {
+  /* width: 67.5%; */
+  width: 70%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
 
-  /* border: 10px solid green; */
+  /* border: 3px solid orange; */
 }
 
 .client--mail--phone {
-  width: 22.5%;
+  position: relative;
+  /* width: 22.5%; */
+  width: 20%;
+  /* width à revoir */
   display: flex;
   flex-direction: column;
   align-items: center;
   border: 1px solid rgba(65, 105, 225, 0.2);
   border-radius: 7px;
+
+  /* border: 1px solid lightgreen; */
+}
+
+.div--hidden--clientMailPhone {
+  position: relative;
+  /* width: 22.5%;  */
+  width: 20%;
+  /* width à revoir */
+  padding: 8px 0;
+
+  background-color: #00002f;
+  border: none;
+  border-radius: 7px;
+  box-shadow: 0 0 7px #4169e180;
+
+  /* border: 1px solid rosybrown; */
+}
+
+.span--client--mail--phone {
+  position: relative;
+  width: 100%; 
+  height: 100%;
   margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  z-index: 10;
+
+  /* border: 1px solid lightgreen; */
 }
 
 .div--crossout--delete {
@@ -55,20 +89,22 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+
+  /* border: 1px solid red; */
 }
 
 .cross--out--btn {
   position: relative;
   width: 30px;
   height: 30px;
-  background-color: green;
+  background-color: #00b300;
   z-index: 2;
 }
 
 .cross--out--btn:hover {
-  background-color: rgb(0, 74, 0);
+  background-color: #00cc00;
 }
 
 .cross--out--btn:active {
-  background-color: rgb(0, 181, 0);
+  background-color: #00ff00;
 }
