--- a/vite-project/src/components/subcomponents/styles/EditableFields.css
+++ b/vite-project/src/components/subcomponents/styles/EditableFields.css
@@ -3,58 +3,35 @@
 }
 
 .daycomp-box {
-  width: 100%;
+  width: auto;
   background-color: #00002f;
   border: none;
   border-radius: 7px;
   box-shadow: 0 0 7px #4169e180;
-}
 
-.title--btn--edit {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
+  margin: 0 10px;
 
-.title--box {
-  width: 100%;
-  text-align: center;
-  font-size: 16px;
-  font-weight: bold;
-  margin: auto;
-  border-bottom: 1px solid rgba(65, 105, 225, 0.2);
-}
-
-.div--btn--client {
-  position: relative;
-  width: 25%;
-  height: 25px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.mini-btn {
-  width: 40px;
-  height: 20px;
-  border-radius: 3px;
+  /* border: 1px solid yellowgreen; */
 }
 
 .input-button-container {
-  width: 100%;
+  width: auto;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+
+  /* border: 3px solid yellowgreen; */
 }
 
 .input-button-textarea {
-  width: 100%;
+  width: auto;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+
+  /* border: 3px solid yellowgreen; */
 }
 
 /* 1 */
@@ -65,7 +42,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  z-index: 1;
+  z-index: 20;
 }
 
 /* 2 */
@@ -76,7 +53,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  z-index: 1;
+  z-index: 30;
 }
 
 /* 3 */
@@ -87,11 +64,13 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  z-index: 10;
+  z-index: 40;
+
+  /* border: 1px solid coral; */
 }
 
 .textarea--editable {
-  width: 77%;
+  width: 80%;
   font-size: 12px;
   font-weight: normal;
   color: #87cefa;
@@ -102,9 +81,11 @@
   resize: none;
   appearance: none;
   transition: 
-      border-color 0.25s ease,
-      box-shadow 0.25s ease,
-      background-color 0.25s ease;
+    border-color 0.25s ease,
+    box-shadow 0.25s ease,
+    background-color 0.25s ease;
+
+  /* border: 1px solid coral; */
 }
 
 /* Style du scroll pour Webkit (Chrome, Safari) */
@@ -127,9 +108,23 @@
   scrollbar-width: thin;
 }
 
+.textarea--editable:focus {
+    border-color: #38bdf8;
+    box-shadow: 0 0 0 4px rgba(56, 189, 248, 0.2);
+}
+
+.textarea--editable:hover {
+    border-color: #475569;
+}
+
+.textarea--editable::placeholder {
+    color: rgba(135, 206, 250, 0.5);
+}
+
+
 .input--editable {
-  width: 75%;
-  padding: 7px 7px;
+  width: 80%;
+  padding: 7px;
   text-align: center;
   font-size: 16px;
   color: #87cefa;
@@ -138,9 +133,9 @@
   border-radius: 12px;
   outline: none;
   transition: 
-      border-color 0.25s ease,
-      box-shadow 0.25s ease,
-      background-color 0.25s ease;
+    border-color 0.25s ease,
+    box-shadow 0.25s ease,
+    background-color 0.25s ease;
 }
 
 .input--editable:focus {
