--- a/vite-project/src/components/styles/TodoPerDay.css
+++ b/vite-project/src/components/styles/TodoPerDay.css
@@ -35,48 +35,35 @@
   align-items: center;
   justify-content: space-between;
 
-  /* border: 3px solid orange; */
+  /* border: 1px solid mediumspringgreen; */
 }
 
 .client--mail--phone {
   position: relative;
-  /* width: 22.5%; */
   width: 20%;
-  /* width à revoir */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 1px solid rgba(65, 105, 225, 0.2);
-  border-radius: 7px;
-
-  /* border: 1px solid lightgreen; */
 }
 
 .div--hidden--clientMailPhone {
   position: relative;
-  /* width: 22.5%;  */
   width: 20%;
-  /* width à revoir */
-  padding: 8px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  /* border: 1px solid pink; */
+}
 
+.span--client--mail--phone {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #00002f;
   border: none;
   border-radius: 7px;
   box-shadow: 0 0 7px #4169e180;
-
-  /* border: 1px solid rosybrown; */
-}
-
-.span--client--mail--phone {
-  position: relative;
-  width: 100%; 
-  height: 100%;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   cursor: pointer;
-  z-index: 10;
+  padding: 8px 0;
 
   /* border: 1px solid lightgreen; */
 }
@@ -90,15 +77,13 @@
   align-items: center;
   justify-content: space-evenly;
 
-  /* border: 1px solid red; */
+  /* border: 1px solid orangered; */
 }
 
 .cross--out--btn {
-  position: relative;
   width: 30px;
   height: 30px;
   background-color: #00b300;
-  z-index: 2;
 }
 
 .cross--out--btn:hover {
