animation view-effect for all component page done

--- a/vite-project/src/components/styles/TodoPerDay.css
+++ b/vite-project/src/components/styles/TodoPerDay.css
@@ -3,6 +3,7 @@
   height: 90px;
   border-radius: 20px;
   margin-bottom: 20px;
+  animation: view-effect 1.0s ease 0s forwards;
 }
 
 .container--todo {
