--- a/vite-project/src/components/styles/CreateInputCheckbox.css
+++ b/vite-project/src/components/styles/CreateInputCheckbox.css
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 20px;
+  animation: view-effect 1.0s ease 0s forwards;
 }
 
 .creation--input--checkbox {
