--- a/vite-project/src/components/styles/FetchFromCSV.css
+++ b/vite-project/src/components/styles/FetchFromCSV.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: start;
+    animation: view-effect 1.0s ease 0s forwards;
 }
 
 .div--todo {
