--- a/vite-project/src/components/styles/TableOfTodos.css
+++ b/vite-project/src/components/styles/TableOfTodos.css
@@ -16,6 +16,7 @@
 
     border: none;
     border-radius: 20px;
+    animation: view-effect 1.0s ease 0s forwards;
     /* box-shadow: 0 0 7px #38bdf8; */
 }
 
