scrollbar under dev

--- a/vite-project/src/components/styles/CreateInputCheckbox.css
+++ b/vite-project/src/components/styles/CreateInputCheckbox.css
@@ -4,6 +4,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  margin: 0 10px;
   margin-bottom: 20px;
   animation: view-effect 1.0s ease 0s forwards;
 }
