--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,11 +1,22 @@
+/* IE & Edge & Firefox */
 #root {
   /* max-width: 1800px; */
   width: auto;
+  height: 100%;
   margin: 0 auto;
+
+  /* -ms-overflow-style: none;
+  scrollbar-width: none; */
 }
+
+/* Chrome, Safari */
+/* #root::-webkit-scrollbar {
+  display: none;
+} */
 
 .main--div--app {
   width: 90%;
+  height: 100vh;
   margin: auto;
 }
 
@@ -21,7 +32,31 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  margin: 0 10px;
   margin-bottom: 20px;
+}
+
+.creator--table--liste {
+  height: 80vh;
+
+  border: 1px solid orangered;
+}
+
+.todolist--div {
+  width: auto;
+  height: 55vh;
+  border: none;
+  border-radius: 20px;
+  
+  margin: 0 10px;
+
+  
+  overflow-y: scroll;
+  scrollbar-width: auto;
+  scrollbar-color: #3498db #87cefa;
+
+
+  border: 1px solid yellow;
 }
 
 .main--div--calendar {
