--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -39,34 +39,43 @@
 .creator--table--liste {
   height: 80vh;
 
-  border: 1px solid orangered;
+  /* border: 3px solid red; */
 }
 
 .todolist--div {
   width: auto;
-  height: 55vh;
+  height: 60vh;
   border: none;
   border-radius: 20px;
   
-  margin: 0 10px;
+  /* margin: 0 10px; */
+  padding: 10px;
 
   
   overflow-y: scroll;
-  scrollbar-width: auto;
-  scrollbar-color: #3498db #87cefa;
+  scrollbar-width: thin;
+  scrollbar-color: #3564ff #00001b;
 
-
-  border: 1px solid yellow;
+  /* border: 1px solid yellow; */
 }
 
 .main--div--calendar {
   width: 100%;
-  min-height: 80vh;
+  height: 80vh;
   display: flex;
   align-items: start;
   justify-content: center;
+
+  /* border: 1px solid yellow; */
 }
 
 .div--calendar {
   width: 100%;
+  height: 80vh;
+
+  overflow-y: scroll;
+  scrollbar-width: thin;
+  scrollbar-color: #3564ff #00001b;
+
+  /* border: 1px solid orange; */
 }
