--- a/vite-project/src/components/subcomponents/styles/PriorityTodo.css
+++ b/vite-project/src/components/subcomponents/styles/PriorityTodo.css
@@ -6,8 +6,8 @@
     height: 50%;
 }
 
-select {
-    position: relative;
+.priority--select {
+    position: absolute;
     font-size: 16px;
     color: #87cefa;
     background-color: #00002f;
@@ -16,6 +16,7 @@ select {
     box-shadow: 0 0 7px #4169e180;
     cursor: pointer;
     padding: 10px 5px;
+    z-index: 100;
 }
 
 option {
