--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,7 +1,6 @@
 #root {
-  /* max-width: 1800px; */
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: auto;
   margin: 0 auto;
 }
 
@@ -30,35 +29,28 @@
 .creator--table--liste {
   width: auto;
   height: 80vh;
-
-  /* border: 3px solid red; */
 }
 
 .todolist--div {
+  position: relative;
   width: auto;
   height: 60vh;
   border: none;
   border-radius: 20px;
-  
-  /* margin: 0 10px; */
   padding: 10px;
-
   
   overflow-y: scroll;
   scrollbar-width: thin;
   scrollbar-color: #3564ff #00001b;
-
-  /* border: 1px solid yellow; */
 }
 
 .main--div--calendar {
-  width: 100%;
+  width: auto;
   height: 80vh;
   display: flex;
   align-items: start;
   justify-content: center;
-
-  /* border: 1px solid yellow; */
+  padding: 0 10px;
 }
 
 .div--calendar {
@@ -68,6 +60,4 @@
   overflow-y: scroll;
   scrollbar-width: thin;
   scrollbar-color: #3564ff #00001b;
-
-  /* border: 1px solid orange; */
 }
