--- a/vite-project/src/components/subcomponents/styles/CheckDay.css
+++ b/vite-project/src/components/subcomponents/styles/CheckDay.css
@@ -20,18 +20,20 @@
 
 .select--day {
     position: absolute;
-    font-size: 16px;
+    font-size: 14px;
     color: #87cefa;
     background-color: #00002f;
     border: none;
     border-radius: 7px;
     box-shadow: 0 0 7px #4169e180;
     cursor: pointer;
+
+    margin-top: 10px;
+    margin-left: 12px;
     padding: 10px 5px;
 }
 
 option {
-    font-size: 16px;
     background-color: #00002f;
     color: #87cefa;
     border: 1.5px solid #334155;
