--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -41,7 +41,8 @@
   
   overflow-y: scroll;
   scrollbar-width: thin;
-  scrollbar-color: #3564ff #00001b;
+  /* scrollbar-color: #3564ff #00001b; */
+  scrollbar-color: #0059ff #111;
 }
 
 .main--div--calendar {
@@ -59,5 +60,6 @@
 
   overflow-y: scroll;
   scrollbar-width: thin;
-  scrollbar-color: #3564ff #00001b;
+  /* scrollbar-color: #3564ff #00001b; */
+  scrollbar-color: #0059ff #111;
 }
