--- a/vite-project/src/components/styles/FetchFromCSV.css
+++ b/vite-project/src/components/styles/FetchFromCSV.css
@@ -27,7 +27,7 @@
 
     overflow-y: scroll;
     scrollbar-width: thin;
-    scrollbar-color: #0059ff #111;
+    scrollbar-color: #0059ff #00001b;
 }
 
 .a--standard {
