--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -41,7 +41,7 @@
   
   overflow-y: scroll;
   scrollbar-width: thin;
-  scrollbar-color: #0059ff #111;
+  scrollbar-color: #0059ff #00001b;
 }
 
 .main--div--calendar {
@@ -59,5 +59,39 @@
 
   overflow-y: scroll;
   scrollbar-width: thin;
-  scrollbar-color: #0059ff #111;
+  scrollbar-color: #0059ff #00001b;
+}
+
+.impossible {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 3rem;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  color: #ff3444;
+}
+
+.no--todo {
+  width: auto;
+  height: 60vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 10px;
+
+  font-size: 3rem;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  color: #87cefa;
+
+  border: 5px dotted #87cefa;
+  border-radius: 4px;
 }
