--- a/vite-project/src/components/styles/TableCalendar.css
+++ b/vite-project/src/components/styles/TableCalendar.css
@@ -70,6 +70,7 @@ tr:nth-child(even) {
     font-size: 12px;
     font-weight: bold;
     color: #0059ff;
+    transition: color 0.2s ease;
 }
 
 .btn--visible:hover {
