--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -113,16 +113,25 @@ button:active {
   position: relative;
   width: 30px;
   height: 30px;
-  background: #ff4500;
+  /* background: #ff4500; */
+  background-color: #cc0000;
+
+  /* background: rgba(255, 69, 0, 0.75); */
+  transform: scale(1.0);
+  transition: transform 0.2s ease, background-color 0.2s ease;
   z-index: 1;
 }
 
 .delete--btn:hover {
-  background: rgba(255, 0, 0, 1);
+  /* background: rgba(255, 0, 0, 1); */
+  background-color: #e60000;
+  transform: scale(1.05);
 }
 
 .delete--btn:active {
-  background: rgba(255, 165, 0, 1);
+  /* background: rgba(255, 165, 0, 1); */
+  background-color: #ff0000;
+  transform: scale(0.95);
 }
 
 @media (prefers-color-scheme: light) {
